@@ -1,3 +1,7 @@
+2010-01-24  Matthew Burgess <matthew@linuxfromscratch.org>
+   * lfs/init.d/udev: Check to see if /dev is already mounted, as it may be if
+     under an initramfs environment.  See ticket #2550.
+
 2009-08-14  Bryan Kadzban <bryan@linuxfromscratch.org>
    * lfs/init.d/udev_retry: Use "udevadm trigger --type=failed", which
      apparently replaced "--retry-failed" some time ago.  "--retry-failed" is
